[gd_scene load_steps=12 format=2]

[ext_resource path="res://Project/Scripts/Scenes/CardHolder.gd" type="Script" id=1]
[ext_resource path="res://Project/Images/Shaders/MaskGradient.png" type="Texture" id=2]
[ext_resource path="res://Project/Scripts/Entities/CustomLabel.gd" type="Script" id=3]
[ext_resource path="res://Project/Images/Gui/KennyBoardGamesIcons/arrow_right.png" type="Texture" id=4]
[ext_resource path="res://Project/Images/Gui/KennyBoardGamesIcons/rhombus.png" type="Texture" id=5]
[ext_resource path="res://Project/Shaders/Mask2DRotated.gdshader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 6 )
shader_param/PI = 3.14159
shader_param/Offset = Vector2( 0.236, -0.028 )
shader_param/Rotation = 1.121
shader_param/Modifier = Vector2( 1, 3.535 )
shader_param/mask_texture = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Project/Fonts/JetBrainsMono/JetBrainsMono-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 50
outline_size = 3
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Project/Fonts/JetBrainsMono/JetBrainsMono-Regular.ttf"

[sub_resource type="DynamicFont" id=11]
size = 50
outline_size = 3
outline_color = Color( 0.211765, 0.211765, 0.517647, 1 )
font_data = SubResource( 10 )

[node name="CardHolder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
Hide_y_pos = 0.0
Hide_y_size = 0.0
Show_y_pos = 0.0
Show_y_size = 0.0
_HolderNode = NodePath("Panel/Holder")
_EnergyNode = NodePath("Panel/EnergyCounter")
_EnergyValue = NodePath("Panel/EnergyCounter/Counters/EnergyTXT")
_EnergyResult = NodePath("Panel/EnergyCounter/Counters/Result")
_HolderPanel = NodePath("Panel")
_CountersNode = NodePath("Panel/EnergyCounter/Counters")

[node name="Panel" type="Panel" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="EnergyCounter" type="Control" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5

[node name="EnergyIMG" type="TextureRect" parent="Panel/EnergyCounter"]
self_modulate = Color( 0.52549, 0.52549, 0.811765, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -47.5
margin_top = -30.0
margin_right = 47.5
margin_bottom = 30.0
rect_min_size = Vector2( 60, 60 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="Counters" type="Control" parent="Panel/EnergyCounter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Result" type="Control" parent="Panel/EnergyCounter/Counters"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
mouse_filter = 2

[node name="IMG" type="TextureRect" parent="Panel/EnergyCounter/Counters/Result"]
material = SubResource( 7 )
anchor_left = 0.5
anchor_right = 0.5
margin_top = -72.0
margin_right = 64.0
margin_bottom = -8.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 32 )
mouse_filter = 2
texture = ExtResource( 4 )

[node name="TXT" type="Label" parent="Panel/EnergyCounter/Counters/Result"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = -6.0
margin_right = 70.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 9 )
text = "5"
align = 1
valign = 1
script = ExtResource( 3 )
font_size = 50
font_outline_color = Color( 1, 1, 1, 1 )
font_outline_size = 3
type = 22

[node name="EnergyTXT" type="Label" parent="Panel/EnergyCounter/Counters"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = -40.0
margin_right = 57.5
margin_bottom = 40.0
custom_fonts/font = SubResource( 11 )
text = "10"
align = 1
valign = 1
script = ExtResource( 3 )
font_size = 50
font_outline_color = Color( 0.211765, 0.211765, 0.517647, 1 )
font_outline_size = 3
type = 22

[node name="Holder" type="Control" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = -10.0

[connection signal="mouse_entered" from="Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_Panel_mouse_exited"]
